# quick

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: quick.h
include/quick/: application.h
src/: application.cpp  application_glfw.cpp  application_sdl2.cpp
